--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-midnight
 title: "Muhammad Tabaza"
-description: "Co-founder and CTO of Heavenly-x, Functional Programmer, and Machine Learning enthusiast."
+description: "Co-founder and CTO of Pragma, Functional Programmer, and Machine Learning enthusiast."
 show_downloads: false
 google_analytics: "UA-156981056-1"
